--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -444,7 +444,7 @@ img{
   .home__img{
     right: 0;
     width: 98%;
-    margin:0 auto;
+     margin-top:-2rem;
      
   }
   .home__img img{
@@ -465,6 +465,10 @@ img{
   }
   .work{
     margin-top:-5rem;
+  }
+  .home__title{
+    margin-top:-1.5rem;
+    font-size:1.2rem;
   }
 }
 
